[package]
name = "scheduler"
version = "0.1.3"
authors = ["Zach Pomerantz <zach@terminal.com>", "Linus Färnstrand <faern@faern.net>"]
description = "Binding to set the linux scheduler (priority, policy, affinity, &c.)"
homepage = "https://github.com/terminalcloud/rust-scheduler"
repository = "https://github.com/terminalcloud/rust-scheduler"
license = "MIT"
readme = "README.md"
keywords = ["sched", "scheduler", "affinity"]
exclude = ["Cargo.lock", ".gitignore"]

[dependencies]
errno = "0"
libc = "0.2"
